--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+<link rel="shortcut icon" href="img/hnet.com-image.ico">
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <meta name="description" content="The Website for Angel Mojarro's job application that he will most definitely use">
+  <meta name="author" content="862307156">
 
-  <title>John Doe - Business Administration</title>
+  <title>Angel Mojarro - ANGEL MOJARRO Buisness & Marketing </title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -22,14 +22,14 @@
   <!-- Custom styles for this template -->
   <link href="css/resume.min.css" rel="stylesheet">
 
-</head>
+<link rel="shortcut icon" href="img/hnet.com-image.ico">
 
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Angel Mojarro</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/Angel Mojarro.jpeg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,26 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Angel Mojarro
         </h1>
         <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <p class="lead mb-4">Likes to play video games<br><br>
 
-        Enter bio here<br><br>
+        Lives super close to the lafc stadium <br> I go to the Univerity of California, Riverside. It is very cool. Thank you for coming to my website that is very nice of you now get ready for the same message again. I go to the Univerity of California, Riverside. It is very cool. Thank you for coming to my website that is very nice of you now get ready for the same message again. I go to the Univerity of California, Riverside. It is very cool. Thank you for coming to my website that is very nice of you now get ready for the same message again. I go to the Univerity of California, Riverside. It is very cool. Thank you for coming to my website that is very nice of you now get ready for the same message again. I go to the Univerity of California, Riverside. It is very cool. Thank you for coming to my website that is very nice of you now get ready for the same message again. I go to the Univerity of California, Riverside. It is very cool. Thank you for coming to my website that is very nice of you now get ready for the same message again. I go to the Univerity of California, Riverside. It is very cool. Thank you for coming to my website that is very nice of you now get ready for the same message again. I go to the Univerity of California, Riverside. It is very cool. Thank you for coming to my website that is very nice of you now get ready for the same message again. I go to the Univerity of California, Riverside. It is very cool. Thank you for coming to my website that is very nice of you now get ready for the same message again. I go to the Univerity of California, Riverside. It is very cool. Thank you for coming to my website that is very nice of you now get ready for the same message again. I go to the Univerity of California, Riverside. It is very cool. Thank you for coming to my website that is very nice of you now get ready for the same message again. I go to the Univerity of California, Riverside. It is very cool. Thank you for coming to my website that is very nice of you now get ready for the same message again. I go to the Univerity of California, Riverside. It is very cool. Thank you for coming to my website that is very nice of you now get ready for the same message again. I go to the Univerity of California, Riverside. It is very cool. Thank you for coming to my website that is very nice of you now get ready for the same message again. I go to the Univerity of California, Riverside. It is very cool. Thank you for coming to my website that is very nice of you now get ready for the same message again. I go to the Univerity of California, Riverside. It is very cool. Thank you for coming to my website that is very nice of you now get ready for the same message again. <br>
 
-        Enter bio here
+        Some more information about myslef right here
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://www.youtube.com/">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://www.instagram.com/">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://twitter.com/?lang=en">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="https://elearnhome.ucr.edu/">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -88,34 +88,33 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
       <div class="w-100">
-        <h2 class="mb-5">Experience</h2>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
-          <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+        <h2 class="mb-5">None That</h2>
+          <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
+            <div class="resume-content">
+              <h3 class="mb-0">Developer</h3>
+              <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Developed websites for so many comapnies<br> 
+              • Gave a TED TALK<br>
+              • Experience with Gaming, PC, PS2, PS3, Wii, WiiU, DS, PS4<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">March 2022 - Present</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
             <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.target.com/">Target Never worked before</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Responsible for the customers<br>
+              • Moved boxes from point A to Point B. very cool<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">March 2016 - March 2022</span>
           </div>
         </div>
 
@@ -125,15 +124,15 @@
             <h3 class="mb-0">Teaching Assistant</h3>
             <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Played Games<br>
+            • Reviewed my own project<br>
+            • Education is pretty cool so I made a website<br>
+            • In charge of exchanging money<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">January 2015 - January 2017</span>
           </div>
         </div>
 
@@ -152,33 +151,33 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">Masters of Business Marketing</div>
+            <div>MBA in Buisness</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">August 2021 - December 2025</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
+            <div class="subheading mb-3">Woeking on it</div>
+            <div>Project Management so cool</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
+            <span class="text-primary">June 2021</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
+            <div class="subheading mb-3">Business Marketing</div>
+            <div>Marketing</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary">August 2021 - May 2025</span>
           </div>
         </div>
 
@@ -190,16 +189,19 @@
     <section class="resume-section p-1 p-lg-5 d-flex align-items-center" id="portfolio">
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
-        <center>
-            <img src="img/image2.jpeg" width="500px">
-        </center>
+<center>
+    <img src="img/images-1.jpeg" width="500px">
+    <img src="img/images.jpeg" width="500px"><br>
+    <img src="img/download.jpeg" width="500px">
+    <img src="img/download-1.jpeg" width="500px"><br>
+</center>
       </div>
     </section>
 
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script>Angel Mojarro </center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
